feat(JavaCodeStyle): Apply Java code style, remove unused imports, and enforce license headers